2011-07-29  Paul Eggert  <eggert@cs.ucla.edu>

	* macros.c: Integer and memory overflow fixes.
	(Fstart_kbd_macro): Don't update size until alloc done.
	(store_kbd_macro_char): Reorder multiplicands to avoid overflow.

	* lread.c (read1, init_obarray): Don't update size until alloc done.

	* keymap.c: Integer overflow fixes.
	(cmm_size, current_minor_maps): Use ptrdiff_t, not int, to count maps.
	(current_minor_maps): Check for size calculation overflow.
	* keymap.h: Change prototypes to match the above.

	* keyboard.c: Integer and memory overflow fixes.
	(read_char, menu_bar_items, tool_bar_items, read_char_x_menu_prompt)
	(read_char_minibuf_menu_width, read_char_minibuf_menu_prompt)
	(follow_key, read_key_sequence): Use ptrdiff_t, not int, to count maps.
	(read_char_minibuf_menu_prompt): Check for overflow in size
	calculations.  Don't update size until allocation succeeds.  Redo
	calculations to avoid overflow.
	* keyboard.h: Change prototypes to match the above.

	* image.c: Integer and memory overflow fixes.
	(RANGED_INTEGERP, TYPE_RANGED_INTEGERP): Remove; these are duplicate
	now that they've been promoted to lisp.h.
	(x_allocate_bitmap_record, x_alloc_image_color)
	(make_image_cache, cache_image, xpm_load):
	Don't update size until alloc is done.
	(xpm_load, lookup_rgb_color, lookup_pixel_color, x_to_xcolors)
	(x_detect_edges):
	Check for size calculation overflow.
	(ct_colors_allocated_max): New constant.
	(x_to_xcolors, x_detect_edges): Reorder multiplicands to avoid
	overflow.

2011-07-28  Paul Eggert  <eggert@cs.ucla.edu>

	* gtkutil.c: Integer overflow fixes.
	(get_utf8_string, xg_store_widget_in_map):
	Check for size-calculation overflow.
	(get_utf8_string): Use ptrdiff_t, not size_t, where either will
	do, as we prefer signed integers.
	(id_to_widget.max_size, id_to_widget.used)
	(xg_store_widget_in_map, xg_remove_widget_from_map)
	(xg_get_widget_from_map, xg_get_scroll_id_for_window)
	(xg_remove_scroll_bar, xg_update_scrollbar_pos):